app/assets/stylesheets/sections/_sight_read.scss
.sight-reading {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(6, 1fr);
  height: 100vh;
  width: 100vw;
  overflow: auto;

  .scores-container {
    grid-area: 1 / 2 / auto / 6;
    padding: 5%;

    .star-score {
      display: flex;
      align-items: center;
      justify-content: center;
      font: {
        family: 'Raleway', sans-serif;
        size: 1rem;
        weight: bold;
      }

      img {
        height: 2em;
        margin: 0.3em;
      }
    }
  }

  .exercise {
    grid-area: 2 / 2 / auto / -2;
  }

  .attempt {
    grid-area: 3 / 2 / auto / -2;
  }

  .exercise, .attempt {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    .sheet-music {
      background-color: #F0EFF0;
      padding: 3%;
      margin-bottom: 5%;
      border-radius: 1rem;
      box-shadow: 0.3rem 0.3rem 0.3rem 0.1rem rgba(0, 0, 0, 0.2);
      width: 90% !important;
      overflow: scroll !important;
      svg {
        position: inherit !important;
      }
    }

    .controls {
      display: flex;
      align-items: center;
      justify-content: space-around;
      width: 100%;
      .control-item {
        margin: 1rem 0;
      }
      #player {
        border-radius: 2rem;
        box-shadow: 0.3rem 0.3rem 0.3rem 0.1rem rgba(0, 0, 0, 0.2);
        width: 90%;
      }
    }
    
    #loader-gif {
      display: none;
      min-width: 90px;
      margin: 6% 3% 3% 3%;
    }
  }

  .next-page {
    grid-area: 1 / -2 / 6 / -1;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

@media (max-width: 750px) {
  .sight-reading {
    display: block;

    .sheet-music {
      margin: 0 5%;
    }
  }
}

